anomaly query params added
